--- a/NezukoRobot/language/en.yaml
+++ b/NezukoRobot/language/en.yaml
@@ -7,25 +7,14 @@ authors: "@saint_foire"
 curr_chat_lang: "Hey. Your current language is {}, select the one you want from the buttons below :)"
 set_chat_lang: "Great, using {} Language it is from now on!"
 
-# PM Text
-pm_start_text: |
-  *Hey Darling, {} ❤️*
-  ✪ I'm an anime-theme management robot [✨](https://telegra.ph/file/6d3e3ef24f64fb6e35df0.jpg)
 
-  ┏━━━━━━━━•❃°•°❀°•°❃•━━━━━━━━┓
-  × *Server Uptime :* `{}`
-  × `{}` *users, across* `{}` *chats.*
-  ┗━━━━━━━━•❃°•°❀°•°❃•━━━━━━━━┛
-
-  ✪ Hit /help to see my available commands.
-   
 group_start_text: |
-  *👋🏻 Hi Darling, I'm Nezuko Robot!*
+  *👋🏻 Hi Darling, I'm Nezuko!*
   
   *Started active since :* `{}`
 
 pm_about_text: |
-  ✺ Hey Darling I'm *Nezuko Robot*, a powerful group management bot built to help you manage your group easily. ✺
+  ✺ Hey Darling I'm *Nezuko*, a powerful group management bot built to help you manage your group easily. ✺
 
   ✪ I can restrict users.
   ✪ I can greet users with customizable welcome messages and even set a group's rules.
@@ -35,11 +24,11 @@ pm_about_text: |
   ✪ I check for admins' permissions before executing any command and more stuffs
 
   _Nezuko's licensed under the GNU General Public License v3.0_
-  Click on button bellow to get basic help for Nezuko Robot.
+  Click on button bellow to get basic help for Nezuko.
 pm_about_admin_text: |
   *✺ Let's make your group bit effective now ✺*
 
-  Congragulations, Nezuko Robot now ready to manage your group.
+  Congragulations, Nezuko now ready to manage your group.
 
   *Admin Tools*
   Basic Admin tools help you to protect and powerup your group.
@@ -54,13 +43,13 @@ pm_about_notes_text: |
   ✪ You can save message/media/audio or anything as notes to get a note simply use # at the beginning of a word
   ✪ You can also set buttons for notes and filters (refer help menu)
 pm_about_support_text: |
-  *✺ Nezuko Robot support chats ✺*
+  *✺ Nezuko support chats ✺*
 
   Join My Support Group/Channel for see or report a problem on Nezuko.
 pm_about_credit_text: |
   *✺ Credis for Nezuko ✺*
 
-  Here Developers Making And Give Inspiration For Made The Nezuko Robot
+  Here Developers Making And Give Inspiration For Made The Nezuko
 pm_help_text: |
   *✺ Click on the button bellow to get description about specifics command. ✺*
 pm_help_module_text: "Here is the help for the *{}* module :\n\n"
@@ -89,7 +78,7 @@ notes_button: "Notes"
 source_button: "Source Code"
 help_button: "Get Help"
 back_button: "Go back"
-about_button: "About Nezuko Robot"
+about_button: "About Nezuko"
 inline_button: "Try inline!​​"
 
 # MODULES
