--- a/NezukoRobot/language/id.yaml
+++ b/NezukoRobot/language/id.yaml
@@ -9,23 +9,14 @@ set_chat_lang: "Bagus, menggunakan Bahasa {} mulai sekarang!"
 
 # PM Text
 pm_start_text: |
-  *Hai sayang, {} ❤️*
-  ✪ Saya adalah robot manajemen tema anime [✨](https://telegra.ph/file/6d3e3ef24f64fb6e35df0.jpg)
-
-  ┏━━━━━━━━•❃°•°❀°•°❃•━━━━━━━━┓
-  × *Waktu Operasi Server :* `{}`
-  × `{}` *pengguna, di seluruh* `{}` *obrolan.*
-  ┗━━━━━━━━•❃°•°❀°•°❃•━━━━━━━━┛
-
-  ✪ Tekan /help untuk melihat perintah saya yang tersedia.
-   
+  *halo*
 group_start_text: |
   *👋🏻 Hai Sayang, aku Robot Nezuko!* 
   
   *Mulai aktif sejak :* `{}`
 
 pm_about_text: |
-  ✺ Hai Sayang saya *Nezuko Robot*, bot manajemen grup yang kuat yang dibuat untuk membantu Anda mengelola grup dengan mudah. ✺
+  ✺ Hai Sayang saya *Nezuko *, bot manajemen grup yang kuat yang dibuat untuk membantu Anda mengelola grup dengan mudah. ✺
 
   ✪ Saya dapat membatasi pengguna.
   ✪ Saya dapat menyapa pengguna dengan pesan selamat datang yang dapat disesuaikan dan bahkan menetapkan aturan grup.
@@ -89,7 +80,7 @@ notes_button: "Catatan"
 source_button: "Kode sumber"
 help_button: "Mendapatkan bantuan"
 back_button: "Kembali"
-about_button: "Tentang Nezuko Robot"
+about_button: "Tentang Nezuko"
 inline_button: "Mencoba inline!​​"
 
 # MODULES
