--- a/NezukoRobot/language/jp.yaml
+++ b/NezukoRobot/language/jp.yaml
@@ -9,15 +9,7 @@ set_chat_lang: "素晴らしい、使用 {} これからの言語!"
 
 # PM Text
 pm_start_text: |
-  *ちょっとダーリン, {} ❤️*
-  ✪ 私はアニメをテーマにした管理ロボットです [✨](https://telegra.ph/file/6d3e3ef24f64fb6e35df0.jpg)
-
-  ┏━━━━━━━━•❃°•°❀°•°❃•━━━━━━━━┓
-  × *サーバーの稼働時間 :* `{}`
-  × `{}` *ユーザー, 横切って* `{}` *チャット。*
-  ┗━━━━━━━━•❃°•°❀°•°❃•━━━━━━━━┛
-
-  ✪ 打つ /help 使用可能なコマンドを表示するには.
+  *こんにちは*
    
 group_start_text: |
   *👋🏻 こんにちはダーリン、私はシエスタロボットです!*
@@ -34,13 +26,13 @@ pm_about_text: |
   ✪ 私はメモ保持システム、ブラックリスト、そして特定のキーワードに対する事前に決められた返信さえ持っています。
   ✪ コマンドなどを実行する前に、管理者の権限を確認します。
 
-  _SiestaはGNUGeneral Public Licensev3.0の下でライセンスされています_
+  _NezukoはGNUGeneral Public Licensev3.0の下でライセンスされています_
   シエスタロボットの基本的なヘルプを表示するには、以下のボタンをクリックしてください。
 
 pm_about_admin_text: |
   *✺ 今すぐあなたのグループを少し効果的にしましょう ✺*
 
-  おめでとうございます。NezukoRobotがグループを管理する準備が整いました。
+  おめでとうございます。Nezukoがグループを管理する準備が整いました。
 
   *管理ツール*
   基本的な管理ツールは、グループを保護してパワーアップするのに役立ちます。
@@ -260,7 +252,7 @@ blacklist_help: |
 chatbot_help: |
     ──「チャットボットAI」──
 
-    Siesta AIは、最大200の言語を検出して返信できる唯一のAIシステムです。
+    Nezuko AIは、最大200の言語を検出して返信できる唯一のAIシステムです。
 
     ❂ /chatbot [ON/OFF]：AIチャットモードを有効または無効にします。
     ❂ /chatbot EN：英語のみのチャットボットを有効にします。
@@ -364,7 +356,7 @@ fsub_feds_help: |
 
     *強制購読：*
 
-    Siestaは、サブスクライブするまでチャンネルにサブスクライブしていないメンバーをミュートできます。有効にすると、サブスクライブしていないメンバーをミュートし、ミュート解除ボタンを表示します。彼らがボタンを押したとき、私は彼らのミュートを解除します
+    Nezukoは、サブスクライブするまでチャンネルにサブスクライブしていないメンバーをミュートできます。有効にすると、サブスクライブしていないメンバーをミュートし、ミュート解除ボタンを表示します。彼らがボタンを押したとき、私は彼らのミュートを解除します
 
     *セットアップ**：**作成者のみ*
     ❂管理者としてあなたのグループに私を追加します
@@ -701,7 +693,7 @@ search_help: |
     ❂ /github <ユーザー名>*：* GitHubユーザーに関する情報を取得します。
     ❂ /country <国名>*：*特定の国に関する情報を収集する
     ❂ /imdb <映画名>*：* imdb.comで映画に関する完全な情報を取得する
-    ❂ Siesta<query>*：* Siestaがクエリに回答します
+    ❂ Nezuko<query>*：* Nezukoがクエリに回答します
 
     💡 例：「日本はどこにあるシエスタ？」
 
