--- a/SiestaRobot/language/en.yaml
+++ b/SiestaRobot/language/en.yaml
@@ -811,7 +811,7 @@ afk_array6: "{} is finally here!\nYou were Away for : <code>{}</code>"
 afk_array7: "Welcome back! {}\nYou were Away for : <code>{}</code>"
 afk_array8: "Where is {}?\nIn the chat!\nYou were Away for : <code>{}</code>"
 afk_check: "{} is currently AFK!\nLast Seen: <code>{}</code>"
-afk_check_reason: "{} is currently AFK!.\nReason: <code>{}</code>"
+afk_check_reason: "{} is currently AFK!.\n<b>Reason</b>:{}\nLast Seen: <code>{}</code>"
 
 # Antichannel.py Variabel
 active_antichannel: "Enabled antichannel in {}"
