--- a/SiestaRobot/language/en.yaml
+++ b/SiestaRobot/language/en.yaml
@@ -802,16 +802,16 @@ pin_button: "👉 Go to message"
 # Afk.py Variabel
 reason_len: "\nYour afk reason was shortened to 100 characters."
 afk: "{} is now away! {}"
-afk_array1: "{} is here!\nYou were Away for : <code>{}</code>"
-afk_array2: "{} is back!\nYou were Away for : <code>{}</code>"
-afk_array3: "{} is now in the chat!\nYou were Away for : <code>{}</code>"
-afk_array4: "{} is awake!\nYou were Away for : <code>{}</code>"
-afk_array5: "{} is back online!\nYou were Away for : <code>{}</code>"
-afk_array6: "{} is finally here!\nYou were Away for : <code>{}</code>"
-afk_array7: "Welcome back! {}\nYou were Away for : <code>{}</code>"
-afk_array8: "Where is {}?\nIn the chat!\nYou were Away for : <code>{}</code>"
+afk_array1: "{} is here!\nYou were Away for : {}"
+afk_array2: "{} is back!\nYou were Away for : {}"
+afk_array3: "{} is now in the chat!\nYou were Away for : {}"
+afk_array4: "{} is awake!\nYou were Away for : {}"
+afk_array5: "{} is back online!\nYou were Away for : {}"
+afk_array6: "{} is finally here!\nYou were Away for : {}"
+afk_array7: "Welcome back! {}\nYou were Away for : {}"
+afk_array8: "Where is {}?\nIn the chat!\nYou were Away for : {}"
 afk_check: "{} is currently AFK!\nLast Seen: <code>{}</code>"
-afk_check_reason: "{} is currently AFK!.\n<b>Reason</b>:{}\nLast Seen: <code>{}</code>"
+afk_check_reason: "{} is currently AFK!.\nReason : {}\nLast Seen: <code>{}</code>"
 
 # Antichannel.py Variabel
 active_antichannel: "Enabled antichannel in {}"
